Including Song et al. 2020

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -7894,6 +7894,25 @@
   number = {9}
 }
 
+@article{websterImprovingRepresentationCanopy2017,
+  title = {Improving Representation of Canopy Temperatures for Modeling Subcanopy Incoming Longwave Radiation to the Snow Surface},
+  author = {Webster, Clare and Rutter, Nick and Jonas, Tobias},
+  date = {2017},
+  journaltitle = {Journal of Geophysical Research: Atmospheres},
+  volume = {122},
+  pages = {9154--9172},
+  issn = {2169-8996},
+  doi = {10.1002/2017JD026581},
+  url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2017JD026581},
+  urldate = {2021-05-19},
+  abstract = {A comprehensive analysis of canopy surface temperatures was conducted around a small and large gap at a forested alpine site in the Swiss Alps during the 2015 and 2016 snowmelt seasons (March–April). Canopy surface temperatures within the small gap were within 2–3°C of measured reference air temperature. Vertical and horizontal variations in canopy surface temperatures were greatest around the large gap, varying up to 18°C above measured reference air temperature during clear-sky days. Nighttime canopy surface temperatures around the study site were up to 3°C cooler than reference air temperature. These measurements were used to develop a simple parameterization for correcting reference air temperature for elevated canopy surface temperatures during (1) nighttime conditions (subcanopy shortwave radiation is 0 W m−2) and (2) periods of increased subcanopy shortwave radiation {$>$}400 W m−2 representing penetration of shortwave radiation through the canopy. Subcanopy shortwave and longwave radiation collected at a single point in the subcanopy over a 24 h clear-sky period was used to calculate a nighttime bulk offset of 3°C for scenario 1 and develop a multiple linear regression model for scenario 2 using reference air temperature and subcanopy shortwave radiation to predict canopy surface temperature with a root-mean-square error (RMSE) of 0.7°C. Outside of these two scenarios, reference air temperature was used to predict subcanopy incoming longwave radiation. Modeling at 20 radiometer locations throughout two snowmelt seasons using these parameterizations reduced the mean bias and RMSE to below 10 W m s−2 at all locations.},
+  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/2017JD026581},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\XEP4LAR2\\Webster et al. - 2017 - Improving representation of canopy temperatures fo.pdf;C\:\\Users\\Me\\Zotero\\storage\\S9VWKNG3\\2017JD026581.html},
+  keywords = {canopy radiation transfer,canopy temperatures,forest canopy structure,longwave radiation,thermal infrared imagery},
+  langid = {english},
+  number = {17}
+}
+
 @article{weerasingheCanopyPositionAffects2014,
   title = {Canopy Position Affects the Relationships between Leaf Respiration and Associated Traits in a Tropical Rainforest in {{Far North Queensland}}},
   author = {Weerasinghe, Lasantha K. and Creek, Danielle and Crous, Kristine Y. and Xiang, Shuang and Liddell, Michael J. and Turnbull, Matthew H. and Atkin, Owen K.},
