--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -195,7 +195,7 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because stomatal conductance ($g_s$) facilitates heat dissipation, when water demand exceeds water transport, driven by irradiance,$T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$.
+Stomatal conductance ($g_s$) is a key factor mediating $T_{leaf}$ [@songTreeSurfaceTemperature2020] because leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when water demand exceeds water transport, driven by for example: irradiance,$T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$. 
 
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
 
@@ -205,6 +205,8 @@ High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ du
  Inherent leaf $gs$ is an important factor for $T_{leaf}$ which is typically greater across species exposed sun-leaves due to stomata density than shade leaves. However, because factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress. 
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves tend to heat and cool faster due to higher $ga$, maintaining lower $T_{leaf}$-$T_{air}$ than large leaves that take longer to heat and cool due to low $ga$ [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017].
+
+Lastly, $gs$ and leaf size together are most important factors in deciding $T_{leaf}$ - $T_{air}$ and temperature sensitivity, because $gs$ determines leaf biological-biophysical interaction and leaf size determines leaf heating and cooling rate. Therefore, smaller leaves with greater $gs$ have are less sensitive to high temperature [@songTreeSurfaceTemperature2020].
 
 ### In-situ observations
 **The principles outlined above, vertical microclimate profile (Fig. `r fig_NEON_vertical`) and leaf traits (see following section) together shape in-situ $T_{leaf}$ observations (Fig. `r fig_leaf_T`).** 
@@ -260,7 +262,7 @@ The distribution of biochemical traits enable photosynthesis and metabolic proce
 
 ### Interspecific variation 
 
-Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Therefore, while general patterns of thermoregulation can be observed across species, some might be more suspectable to heat stress at a vertical gradient than others [@fauset_differences_2018].
+Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -326,9 +328,9 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-While in a few studies $Q_{10}$ across species shows to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Contranstingly, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta, though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
-
-
+While in a few studies $Q_{10}$ shows to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Contranstingly, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta, though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+- Response of respiration to leaf temperature [partially represented  by $E_{0}$] in Quercus rubra hardly varies with canopy position, but canopy-position effect is respiration is much greater in mesic sites, and seasonal effect is greater in drier sites [@xuSeasonalVariationTemperature2006]
+ 
 ### VOC production
 
 **Isoprene production**
