--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,7 +110,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Leading to, individually or in combination, reduced forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Leading to, individually or in combination, reduced forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
@@ -195,18 +195,18 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-Stomatal conductance ($g_s$) is a key factor mediating $T_{leaf}$ [@songTreeSurfaceTemperature2020] because leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when water demand exceeds water transport, driven by for example: irradiance,$T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$. 
+Stomatal conductance ($g_s$) is a key factor mediating $T_{leaf}$ [@songTreeSurfaceTemperature2020].Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when water demand exceeds water transport, driven by for example: irradiance,$T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$. 
 
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
 
 High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling [Drake et al. 2018] but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, through smaller $g_a$, which increases $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
- Inherent leaf $gs$ is an important factor for $T_{leaf}$ which is typically greater across species exposed sun-leaves due to stomata density than shade leaves. However, because factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress. 
+ Inherent leaf $gs$ is typically greater across species exposed sun-leaves due to stomata density than shade leaves. However, because factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress. 
 
-**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves tend to heat and cool faster due to higher $ga$, maintaining lower $T_{leaf}$-$T_{air}$ than large leaves that take longer to heat and cool due to low $ga$ [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017].
+**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves tend to heat and cool faster due to higher $ga$, maintaining lower $T_{leaf}$-$T_{air}$ than large leaves that take longer to heat and cool due to low $ga$, therefore can experience greater $T_{leaf}$ - $T_{air}$ than small leaves [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
 
-Lastly, $gs$ and leaf size together are most important factors in deciding $T_{leaf}$ - $T_{air}$ and temperature sensitivity, because $gs$ determines leaf biological-biophysical interaction and leaf size determines leaf heating and cooling rate. Therefore, smaller leaves with greater $gs$ have are less sensitive to high temperature [@songTreeSurfaceTemperature2020].
+Lastly, $gs$ and leaf size together, though donot solely explain mean $T_{leaf}$, are most important factors in deciding $T_{leaf}$ - $T_{air}$ and temperature sensitivity, because $gs$ determines leaf biological-biophysical interaction and leaf size determines leaf heating and cooling rate. Therefore, smaller leaves with greater $gs$ are less sensitive to high temperature [@songTreeSurfaceTemperature2020].
 
 ### In-situ observations
 **The principles outlined above, vertical microclimate profile (Fig. `r fig_NEON_vertical`) and leaf traits (see following section) together shape in-situ $T_{leaf}$ observations (Fig. `r fig_leaf_T`).** 
@@ -218,6 +218,9 @@ Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little 
 Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies from $gs$ limitation, than buffered lower-canopies [@doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016]. 
 Greater light input in exposed upper-canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$, making upper-canopies highly susceptible to heat stress [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. 
 Comparing forests, upper canopies of temperate deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. 
+
+-"Leaves with adequate water supply are partly buffered against air-temperature
+variations, through a passive biophysical mechanism"[@dongBiophysicalHomoeostasisLeaf2017].
 
 ## Leaf traits 
 
@@ -262,7 +265,7 @@ The distribution of biochemical traits enable photosynthesis and metabolic proce
 
 ### Interspecific variation 
 
-Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across speci-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -348,7 +351,7 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [Oishi et al. 2016].This can implication to canopies and gaps that reside at levels of greater $VPD$. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. However, soil water loss during drought effects larger trees more than small trees because, limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate].
+Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [Oishi et al. 2016; @corlettImpactsWarmingTropical2011] .This can implication to canopies and gaps that reside at levels of greater $VPD$. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. However, soil water loss during drought effects larger trees more than small trees because, limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate].
 
 Additionally, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense, particularly in temperate-deciduous forests [Zohnner and Renner, 2019]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis [and C uptake?] in reflushed leaves [Filewood and Thomas, 2013].
 
@@ -356,7 +359,10 @@ Additionally, understory growth can be more sensitive to annual warming than can
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
 However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
-It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. Interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height, light and water. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a].
+It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. 
+-Whereas, in other cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]
+-Decelarating tree growth rates predominantly in smaller trees, but not restricted to, have also been observed in tropical forests, associated with local climate patterns of mean daily minimum temperature, increasing temperature and rainfall regime [Feeley et al. 2007] 
+-Interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height, light and water. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a].
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
 
@@ -393,7 +399,9 @@ Canopy buffering is crucial to microclimate functioning, which is influenced by 
 
 ### warming
 
-While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Whereas, in other cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. Heatwave and temperature  can alter canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019]. At a leaf metabolism level, fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021].
+While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Heatwave and temperature  can alter canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019]. At a leaf metabolism level, fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021].
+
+Tropical forests are narrower thermal limits [@corlettImpactsWarmingTropical2011]
 
 Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
