--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1724,6 +1724,23 @@
   number = {10}
 }
 
+@article{feeleyDeceleratingGrowthTropical2007,
+  title = {Decelerating Growth in Tropical Forest Trees},
+  author = {Feeley, Kenneth J. and Joseph Wright, S. and Nur Supardi, M. N. and Kassim, Abd Rahman and Davies, Stuart J.},
+  date = {2007-06},
+  journaltitle = {Ecol Letters},
+  volume = {10},
+  pages = {461--469},
+  issn = {1461-023X, 1461-0248},
+  doi = {10.1111/j.1461-0248.2007.01033.x},
+  url = {http://doi.wiley.com/10.1111/j.1461-0248.2007.01033.x},
+  urldate = {2021-05-20},
+  abstract = {The impacts of global change on tropical forests remain poorly understood. We examined changes in tree growth rates over the past two decades for all species occurring in large (50-ha) forest dynamics plots in Panama and Malaysia. Stem growth rates declined significantly at both forests regardless of initial size or organizational level (species, community or stand). Decreasing growth rates were widespread, occurring in 24—71\% of species at Barro Colorado Island, Panama (BCI) and in 58—95\% of species at Pasoh, Malaysia (depending on the sizes of stems included). Changes in growth were not consistently associated with initial growth rate, adult stature, or wood density. Changes in growth were significantly associated with regional climate changes: at both sites growth was negatively correlated with annual mean daily minimum temperatures, and at BCI growth was positively correlated with annual precipitation and number of rainfree days (a measure of relative insolation). While the underlying cause(s) of decelerating growth is still unresolved, these patterns strongly contradict the hypothesized pantropical increase in tree growth rates caused by carbon fertilization. Decelerating tree growth will have important economic and environmental implications.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\J92YTGZ8\\Feeley et al. - 2007 - Decelerating growth in tropical forest trees.pdf},
+  langid = {english},
+  number = {6}
+}
+
 @article{felsmannResponsesStructureFunction2017,
   title = {Responses of the Structure and Function of the Understory Plant Communities to Precipitation Reduction across Forest Ecosystems in {{Germany}}},
   author = {Felsmann, Katja and Baudis, Mathias and Kayler, Zachary E. and Puhlmann, Heike and Ulrich, Andreas and Gessler, Arthur},
